--- a/portfolio.html
+++ b/portfolio.html
@@ -418,6 +418,26 @@
             </ul>
           </div>
         </div>
+                <div class="footer-submit">
+          <div class="footer-submit-form">
+            <p class="footer-submit-text">Підпишіться на розсилку</p>
+            <label class="footer-submit-label" for="submit-mail"></label>
+            <input
+              class="footer-submit-input"
+              type="email"
+              name="submit-mail"
+              id="submit-mail"
+              placeholder="E-mail"
+            />
+            
+            <button class="footer-submit-btn" type="submit">
+              Підписатися
+              <svg class="footer-submit-icon" width="24px" height="24px">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+             </div>
+          </div>
       </footer>
     </main>
   </body>
