--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                    
                   </label>
                 </div>
-               
+                </div>
 
                 <button class="form-btn" type="submit">Відправити</button>
               </form>
